--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.7",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.2.0",
     "mongoose": "^5.13.13",
     "socket.io": "^4.5.4"
   }
