--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "forever": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.2.0",
     "mongoose": "^5.13.13",
