added API tests

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET = "battleship-secret-key"
 MONGO_URL ="mongodb://localhost:27017/battleship"
-FRONTEND_URL ="http://localhost:8081"
+FRONTEND_URL ="http://localhost:8081/"
 
 SERVER_PORT = 8080
 SOCKET_PORT = 3000
